@@ -2039,6 +2039,7 @@ class tx_templavoila_cm1 extends t3lib_SCbase {
 			foreach ($elParentLevel as $pKey=>$pValue) {
 				if (in_array($lastEl['path'], $pValue)) {
 					$parentElement = $pKey;
+					break;
 				} elseif ($hasId) {
 					foreach($pValue as $pElement) {
 						if(stristr($pElement, '#') && preg_replace('/^(\w+)\.?.*#(.*)$/i', '\1#\2', $pElement) ==  $lastEl['path']) {
@@ -2047,15 +2048,13 @@ class tx_templavoila_cm1 extends t3lib_SCbase {
 						}
 					}
 				}
-				if($parentElement != '') {
-					break;
-				}
 			}
 
 			if (!$hasId && preg_match('/\[\d+\]$/',$lastEl['path'])) {
 					// we have a nameless element, therefore the index is used
 				$pos = preg_replace('/^.*\[(\d+)\]$/','\1', $lastEl['path']);
-				$sameLevelElements = array_slice($elParentLevel[$parentElement], $pos);
+					// index is "corrected" by one to include the current element in the selection
+				$sameLevelElements = array_slice($elParentLevel[$parentElement], $pos-1);
 			} else {
 					// we have to search ourselfs because there was no parent and no numerical index to find the right elements
 				$foundCurrent = FALSE;
